--- a/index.html
+++ b/index.html
@@ -3,11 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grandiose</title>
+    <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </head>
 <body>
-    
-</body>
+    <div class="container py-4 px-3 mx-auto">
+      <header>
+        <h2 class="brand-color">GRANDIOSE</h2>
+        <nav>
+          <a class="brand-color">Welcome</a>
+          <a class="brand-color">Hire us !</a>
+          <a class="brand-color">Work</a>
+          <a class="brand-color">Blog</a>
+        </nav>
+      </header>
+  
+      <div class="text-start my-5">
+        <h1 class="fw-bold brand-color">Grandiose, they are dedicated</h1>
+        <p class="mt-3">Hire a Grandiose team and <strong>fire them when you're done</strong>, don’t be afraid, they have work to accomplish !</p>
+        <div class="mt-4">
+          <button class="btn-brand me-2">Hire us !</button>
+          <button class="btn-brand-outline">Discover Grandiose</button>
+        </div>
+      </div>
+  
+      <section>
+        <h2 class="text-center brand-color mb-5">Designed to help</h2>
+  
+        <!-- Bootstrap grid system -->
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-3">
+            <div class="service-card">
+              <h4>Brand design</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <button class="btn btn-outline-primary mt-2">I need an identity !</button>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="service-card">
+              <h4>SEO & marketing</h4>
+              <p>Vestibulum auctor ornare leo, non suscipit magna interdum eu.</p>
+              <button class="btn btn-outline-primary mt-2">Make me the first !</button>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="service-card">
+              <h4>Creative Design</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <button class="btn btn-outline-primary mt-2">I need innovation !</button>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="service-card">
+              <h4>AI consultant</h4>
+              <p>Curabitur pellentesque nibh nibh, mattis tellus.</p>
+              <button class="btn btn-outline-primary mt-2">Let’s prompt !</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
+
