--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="container py-4 px-3 mx-auto">
       <header>
-        <h2 class="brand-color">GRANDIOSE</h2>
+        <h2 class="brand-color-title">GRANDIOSE</h2>
         <nav>
-          <a class="brand-color">Welcome</a>
+          <a class="brand-color-title">Welcome</a>
           <a class="brand-color">Hire us !</a>
           <a class="brand-color">Work</a>
           <a class="brand-color">Blog</a>
@@ -22,7 +22,7 @@
   
       <div class="text-start my-5">
         <h1 class="fw-bold brand-color">Grandiose, they are dedicated</h1>
-        <p class="mt-3">Hire a Grandiose team and <strong>fire them when you're done</strong>, don’t be afraid, they have work to accomplish !</p>
+        <p class="mt-3 brand-color">Hire a Grandiose team and <strong>fire them when you're done</strong>, don’t be afraid, they have work to accomplish !</p>
         <div class="mt-4">
           <button class="btn-brand me-2">Hire us !</button>
           <button class="btn-brand-outline">Discover Grandiose</button>
@@ -30,35 +30,35 @@
       </div>
   
       <section>
-        <h2 class="text-center brand-color mb-5">Designed to help</h2>
+        <h2 class="text-start brand-color mb-5">Designed to help</h2>
   
         <!-- Bootstrap grid system -->
         <div class="row g-4">
-          <div class="col-md-6 col-lg-3">
-            <div class="service-card">
-              <h4>Brand design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class="col">
+            <div class="service-card ">
+              <h4 class="brand-color">Brand design</h4>
+              <p class="brand-color">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula.</p>
               <button class="btn btn-outline-primary mt-2">I need an identity !</button>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="service-card">
-              <h4>SEO & marketing</h4>
-              <p>Vestibulum auctor ornare leo, non suscipit magna interdum eu.</p>
+              <h4 class="brand-color">SEO & marketing</h4>
+              <p class="brand-color">Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh</p>
               <button class="btn btn-outline-primary mt-2">Make me the first !</button>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="service-card">
-              <h4>Creative Design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h4 class="brand-color">Creative Design</h4>
+              <p class="brand-color">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula.</p>
               <button class="btn btn-outline-primary mt-2">I need innovation !</button>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="service-card">
-              <h4>AI consultant</h4>
-              <p>Curabitur pellentesque nibh nibh, mattis tellus.</p>
+              <h4 class="brand-color">AI consultant</h4>
+              <p  class="brand-color">Mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh</p>
               <button class="btn btn-outline-primary mt-2">Let’s prompt !</button>
             </div>
           </div>
