--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <header>
         <h2 class="brand-color-title">GRANDIOSE</h2>
         <nav>
-          <a class="brand-color-title">Welcome</a>
-          <a class="brand-color">Hire us !</a>
-          <a class="brand-color">Work</a>
-          <a class="brand-color">Blog</a>
+          <a class="brand-color-menu1">Welcome</a>
+          <a class="brand-color-menu2">Hire us !</a>
+          <a class="brand-color-menu2">Work</a>
+          <a class="brand-color-menu2">Blog</a>
         </nav>
       </header>
   
@@ -31,14 +31,13 @@
   
       <section>
         <h2 class="text-start brand-color mb-5">Designed to help</h2>
-  
-        <!-- Bootstrap grid system -->
+
         <div class="row g-4">
           <div class="col">
             <div class="service-card ">
               <h4 class="brand-color">Brand design</h4>
               <p class="brand-color">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula.</p>
-              <button class="btn btn-outline-primary mt-2">I need an identity !</button>
+              <button class="btn btn-outline-custom mt-2">I need an identity !</button>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
@@ -65,9 +64,7 @@
         </div>
       </section>
     </div>
-  
-    <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   </body>
 </html>
 
