--- a/index.html
+++ b/index.html
@@ -80,6 +80,133 @@
       </section>
     </div>
 
+
+
+
+
+
+
+
+
+
+
+
+    <div class="container py-5">
+      <!-- Stats Section -->
+      <div class="row text-center mb-5">
+        <div class="col-6 col-md">
+          <h2 class="brand-color2">1290</h2>
+          <p class="texte2">collaborators across the world</p>
+        </div>
+        <div class="col-6 col-md">
+          <h2 class="brand-color2">4,48</h2>
+          <p class="texte2"><span class="text-primary">⭐️</span> Trust Pilot evaluation</p>
+        </div>
+        <div class="col-6 col-md">
+          <h2 class="brand-color2">9178</h2>
+          <p class="texte2">hours of dedication everyday</p>
+        </div>
+        <div class="col-6 col-md">
+          <h2 class="brand-color2">890</h2>
+          <p class="texte2">pizzas eaten since 10:00 PM</p>
+        </div>
+        <div class="col-12 col-md">
+          <h2 class="brand-color2">1</h2>
+          <p class="texte2">purpose, your project</p>
+        </div>
+      </div>
+  
+      <!-- Reviews Section -->
+      <div class="row g-4 mb-5">
+        <div class="col-md-4">
+          <div class="review-card">
+            <div class="d-flex align-items-center mb-3">
+              <img src="images/MAQUETTAGE WEB images/happy customer.jpg" class="rounded-circle me-3 avatar-lg " alt="avatar">
+              <span class="badge-custom">Happy customer</span>
+            </div>
+            <p class="texte2" >Donec at cras nisl non aenean eget eu nisl nec. Tempor diam malesuada dictum ornare sagittis sit tempus est. Egestas nulla facilisis turpis ornare nisi tortor eget. Ac purus massa nisi blandit ullamcorper sagittis. Penatibus.</p>
+            <div class="stars mt-3">
+              <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
+              <span class="stars-text">5 / 5 stars</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="review-card">
+            <div class="d-flex align-items-center mb-3">
+              <img src="images/MAQUETTAGE WEB images/Testimonies.png" class="rounded-circle me-3 avatar-lg" alt="avatar">
+              <span class="badge-custom">So Grandiose !</span>
+            </div>
+            <p class="texte2" >Faucibus cras felis porta consectetur dui quis. Bibendum orci lorem elementum euismod aliquet orci eget turpis tellus. Diam cras enim vitae pellentesque viverra sem. Augue consectetur arcu diam odio ornare sed eu.</p>
+            <div class="stars mt-3">
+              <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot empty"></span>
+              <span class="stars-text">4 / 5 stars</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="review-card">
+            <div class="d-flex align-items-center mb-3">
+              <img src="images/MAQUETTAGE WEB images/so good.jpg" class="rounded-circle me-3 avatar-lg" alt="avatar">
+              <span class="badge-custom">So goooood !</span>
+            </div>
+            <p class="texte2" >A morbi volutpat in leo purus. Ac aliquam tristique laoreet nec turpis id tempus id tincidunt. Purus sit non mollis elementum ac nibh faucibus ut enim. Adipiscing eu tortor viverra vivamus commodo tellus. In sit facilisi aliquam.</p>
+            <div class="stars mt-3">
+              <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot empty"></span><span class="dot empty"></span>
+              <span class="stars-text">3 / 5 stars</span>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+      
+      <!-- FAQ Section -->
+      <img src="images/MAQUETTAGE WEB images/Version Logo Default.png" class="faq-icon" alt="logo" ></img>
+      <br></br>
+      <h3 class="brand-color fw-bold mb-4">Your questions</h3>
+  
+      <div class="accordion" id="faqAccordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              What are these Grandiose people ?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+            <div class="accordion-body rep-texte">
+              This is the first item's accordion body. It is hidden by default, until the collapse plugin adds the appropriate classes.
+            </div>
+          </div>
+        </div>
+  
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              You tell me I can hire as many people as I need ?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Yes, absolutely. Hire and fire freely. That’s how flexible we are.
+            </div>
+          </div>
+        </div>
+  
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              How much does this costs ?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Our pricing depends on your needs. Contact us for a quote tailored to your project.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
 
