page blog assemblée finale

--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Card Grid</title>
-  <link rel="stylesheet" href="blog.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>badges</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  
+  <div class="btn-container">
+  <span class="btn">Grandiose creatives</span>
+    
+  <span class="btn">Grandiose writers</span>
+    
+  <span class="btn">Grandiose SEO</span>
+</div>
 
   <div class="card-grid">
     <div class="card light-blue">
@@ -62,6 +78,18 @@
       <h2>Get a life, get a job, get a dog</h2>
       <a href="#" class="read-link">Read</a>
     </div>
+  </div>
+  
+  <div class="pagination-bg">
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  </ul>
+</nav>
   </div>
 
   
