--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style4.css">
+  <meta charset="UTF-8">
+  <title>Card Design</title>
+  <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>They trusted the process</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <section class="project-section">
+    <div class="project-box">
+      <span class="project-tag">Our latest project</span>
+      <div class="project-client">
+         <img src="images/MAQUETTAGE WEB images/microsoft bis.png" alt="Logo microsoft bis" class="img-fluid card-img">
+      </div>
+    </div>
+
+    <h1 class="section-title">They trusted the process</h1>
+    <p class="section-description">
+      Tincidunt egestas gravida erat eget. In volutpat dolor quis lacus sit nulla sed semper neque. 
+      Consectetur odio lectus tellus consequat. Aliquet dignissim quisque faucibus mattis. 
+      Felis consequat leo orci aliquet dui viverra posuere. 
+      Scelerisque elementum commodo proin donec porttitor id purus magna consectetur. 
+      Eget ac pulvinar id non amet posuere feugiat sagittis.
+    </p>
+
+    <a href="#" class="cta-button">Discover how we helped</a>
+  </section>
+</body>
+</html>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <link rel="stylesheet" href="style3.css">
   <meta charset="UTF-8">
   <title>Card Design</title>
@@ -32,8 +76,8 @@
                 Some quick example text to build on the card title and make up the bulk of the card's content.
             </div>
             <div class="card-footer">
-                <img src="images/MAQUETTAGE WEB images/the new yorker.png" alt="Logo New Yorker" class="img-fluid card-img">
-              <span class="tag">UX Strategy</span>
+                <img src="images/MAQUETTAGE WEB images/the new yorker bis.png" alt="Logo New Yorker" class="img-fluid card-img">
+              <span class="tag">Marketing</span>
             </div>
           </div>
         </div>
@@ -46,8 +90,8 @@
                 Some quick example text to build on the card title and make up the bulk of the card's content.
             </div>
             <div class="card-footer">
-              <span class="brand">GOOGLE</span>
-              <span class="tag">Data, CRO</span>
+              <img src="images/MAQUETTAGE WEB images/Netflix.png" alt="Logo netflix" class="img-fluid card-img">
+              <span class="tag">Design  research</span>
             </div>
           </div>
         </div>
@@ -60,8 +104,8 @@
                 Some quick example text to build on the card title and make up the bulk of the card's content.
             </div>
             <div class="card-footer">
-              <span class="brand">ADOBE</span>
-              <span class="tag">UI Design</span>
+              <img src="images/MAQUETTAGE WEB images/Microsoft.png" alt="Logo Microsoft" class="img-fluid card-img">
+              <span class="tag">Design thinking</span>
             </div>
           </div>
         </div>
@@ -74,8 +118,8 @@
                 Some quick example text to build on the card title and make up the bulk of the card's content.
             </div>
             <div class="card-footer">
-              <span class="brand">UBER</span>
-              <span class="tag">UX Research</span>
+              <img src="images/MAQUETTAGE WEB images/Microsoft.png" alt="Logo Microsoft" class="img-fluid card-img">
+              <span class="tag">Sarcasm</span>
             </div>
           </div>
         </div>
@@ -88,8 +132,8 @@
                 Some quick example text to build on the card title and make up the bulk of the card's content.
             </div>
             <div class="card-footer">
-              <span class="brand">CANVA</span>
-              <span class="tag">Branding</span>
+              <img src="images/MAQUETTAGE WEB images/Microsoft.png" alt="Logo Microsoft" class="img-fluid card-img">
+              <span class="tag">Another sarcasm</span>
             </div>
           </div>
         </div>
