--- a/index3.html
+++ b/index3.html
@@ -1,3 +1,22 @@
+  <div class="main-content-wrapper"> 
+      
+      <div class="container py-4 px-3 mx-auto"> 
+        <header>
+          <h2 class="brand-color-title">GRANDIOSE</h2>
+          <nav >
+            <a class="brand-color-menu1">Welcome</a>
+            <a class="brand-color-menu2">Hire us !</a>
+            <a class="brand-color-menu2">Work</a>
+            <a class="brand-color-menu2">Blog</a>
+          </nav>
+        </header>
+    
+        <div class="text-start my-5">
+          <img src="images/MAQUETTAGE WEB images/Logo.png" class="img-custom2" alt="logo" ></img>
+          <h1 class="fw-bold brand-color">Grandiose, they are dedicated</h1>
+          <p class="mt-3 brand-color">Hire a Grandiose team and <strong>fire them when you're done</strong>, don’t be afraid, they have work to accomplish !</p>
+          <div class="mt-4">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,10 +55,10 @@
     </p>
 
     <a href="#" class="cta-button">Discover how we helped</a>
+</button>
   </section>
 </body>
 </html>
-
 
 
 <!DOCTYPE html>
