--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
+  <link rel="stylesheet" href="blog.css">
+</head>
+<body>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Card Grid</title>
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
 </head>
 <body>
   
@@ -16,18 +27,17 @@
 </head>
 <body>
   
-  <div class="btn-container">
-  <span class="btn">Grandiose creatives</span>
-    
-  <span class="btn">Grandiose writers</span>
-    
-  <span class="btn">Grandiose SEO</span>
+ <div class="btn-container d-flex flex-wrap gap-2 mb-4">
+  <button type="button" class="btn btn-primary le-bouton">Grandiose creatives</button>
+  <button type="button" class="btn btn-primary le-bouton">Grandiose writers</button>
+  <button type="button" class="btn btn-primary le-bouton">Grandiose SEO</button>
 </div>
+
 
   <div class="card-grid">
     <div class="card light-blue">
       <div class="meta">
-        <span class="badge">Badges</span>
+<span class="badge rounded-pill text-bg-secondary">Badges</span>
         <span class="section">Preamble</span>
       </div>
       <h2>How to sell drugs online, fast</h2>
@@ -36,7 +46,7 @@
 
     <div class="card light-purple">
       <div class="meta">
-        <span class="badge">Badges</span>
+<span class="badge rounded-pill text-bg-secondary">Badges</span>
         <span class="section">Preamble</span>
       </div>
       <h2>Do what I say, not what I do</h2>
@@ -45,7 +55,8 @@
 
     <div class="card light-pink">
       <div class="meta">
-        <span class="badge">Badges</span>
+        <span class="badge rounded-pill text-bg-secondary">Badges</span>
+
         <span class="section">Preamble</span>
       </div>
       <h2>Learn by doing, do it now</h2>
@@ -54,7 +65,7 @@
 
     <div class="card light-orange">
       <div class="meta">
-        <span class="badge">Badges</span>
+<span class="badge rounded-pill text-bg-secondary">Badges</span>
         <span class="section">Preamble</span>
       </div>
       <h2>Looking for a job ?<br>Let others do this for you</h2>
@@ -63,7 +74,7 @@
 
     <div class="card light-blue">
       <div class="meta">
-        <span class="badge">Badges</span>
+<span class="badge rounded-pill text-bg-secondary">Badges</span>
         <span class="section">Preamble</span>
       </div>
       <h2>Grandiose, the best thing that happened to me</h2>
@@ -72,7 +83,7 @@
 
     <div class="card light-green">
       <div class="meta">
-        <span class="badge">Badges</span>
+<span class="badge rounded-pill text-bg-secondary">Badges</span>
         <span class="section">Preamble</span>
       </div>
       <h2>Get a life, get a job, get a dog</h2>
@@ -93,5 +104,7 @@
   </div>
 
   
+</body>
+</html>
 </body>
 </html>
