--- a/blog.html
+++ b/blog.html
@@ -1,99 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
-  <link rel="stylesheet" href="blog.css">
-</head>
-<body>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Card Grid</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="blog.css" />
 </head>
-<body>
-  
-  <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>badges</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  
- <div class="btn-container d-flex flex-wrap gap-2 mb-4">
-  <button type="button" class="btn btn-primary le-bouton">Grandiose creatives</button>
-  <button type="button" class="btn btn-primary le-bouton">Grandiose writers</button>
-  <button type="button" class="btn btn-primary le-bouton">Grandiose SEO</button>
-</div>
+<body class="bg-white p-4">
 
+  <div class="d-flex gap-2 mb-4">
+    <button class="btn btn-primary le-bouton">Grandiose creatives</button>
+    <button class="btn btn-primary le-bouton">Grandiose writers</button>
+    <button class="btn btn-primary le-bouton">Grandiose SEO</button>
+  </div>
 
-  <div class="card-grid">
-    <div class="card light-blue">
-      <div class="meta">
-<span class="badge rounded-pill text-bg-secondary">Badges</span>
-        <span class="section">Preamble</span>
+  <div class="row g-4">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card light-blue h-100 p-4 d-flex flex-column">
+        <div class="mb-3 d-flex align-items-center gap-2">
+          <span class="badge rounded-pill text-bg-secondary">Badges</span>
+          <span class="section text-muted">Preamble</span>
+        </div>
+        <h2 class="h5 fw-bold flex-grow-1">How to sell drugs online, fast</h2>
+        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
-      <h2>How to sell drugs online, fast</h2>
-      <a href="#" class="read-link">Read</a>
     </div>
 
-    <div class="card light-purple">
-      <div class="meta">
-<span class="badge rounded-pill text-bg-secondary">Badges</span>
-        <span class="section">Preamble</span>
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card light-purple h-100 p-4 d-flex flex-column">
+        <div class="mb-3 d-flex align-items-center gap-2">
+          <span class="badge rounded-pill text-bg-secondary">Badges</span>
+          <span class="section text-muted">Preamble</span>
+        </div>
+        <h2 class="h5 fw-bold flex-grow-1">Do what I say, not what I do</h2>
+        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
-      <h2>Do what I say, not what I do</h2>
-      <a href="#" class="read-link">Read</a>
     </div>
 
-    <div class="card light-pink">
-      <div class="meta">
-        <span class="badge rounded-pill text-bg-secondary">Badges</span>
-
-        <span class="section">Preamble</span>
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card light-pink h-100 p-4 d-flex flex-column">
+        <div class="mb-3 d-flex align-items-center gap-2">
+          <span class="badge rounded-pill text-bg-secondary">Badges</span>
+          <span class="section text-muted">Preamble</span>
+        </div>
+        <h2 class="h5 fw-bold flex-grow-1">Learn by doing, do it now</h2>
+        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
-      <h2>Learn by doing, do it now</h2>
-      <a href="#" class="read-link">Read</a>
     </div>
 
-    <div class="card light-orange">
-      <div class="meta">
-<span class="badge rounded-pill text-bg-secondary">Badges</span>
-        <span class="section">Preamble</span>
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card light-orange h-100 p-4 d-flex flex-column">
+        <div class="mb-3 d-flex align-items-center gap-2">
+          <span class="badge rounded-pill text-bg-secondary">Badges</span>
+          <span class="section text-muted">Preamble</span>
+        </div>
+        <h2 class="h5 fw-bold flex-grow-1">Looking for a job ?<br>Let others do this for you</h2>
+        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
-      <h2>Looking for a job ?<br>Let others do this for you</h2>
-      <a href="#" class="read-link">Read</a>
     </div>
 
-    <div class="card light-blue">
-      <div class="meta">
-<span class="badge rounded-pill text-bg-secondary">Badges</span>
-        <span class="section">Preamble</span>
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card light-blue h-100 p-4 d-flex flex-column">
+        <div class="mb-3 d-flex align-items-center gap-2">
+          <span class="badge rounded-pill text-bg-secondary">Badges</span>
+          <span class="section text-muted">Preamble</span>
+        </div>
+        <h2 class="h5 fw-bold flex-grow-1">Grandiose, the best thing that happened to me</h2>
+        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
-      <h2>Grandiose, the best thing that happened to me</h2>
-      <a href="#" class="read-link">Read</a>
     </div>
 
-    <div class="card light-green">
-      <div class="meta">
-<span class="badge rounded-pill text-bg-secondary">Badges</span>
-        <span class="section">Preamble</span>
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card light-green h-100 p-4 d-flex flex-column">
+        <div class="mb-3 d-flex align-items-center gap-2">
+          <span class="badge rounded-pill text-bg-secondary">Badges</span>
+          <span class="section text-muted">Preamble</span>
+        </div>
+        <h2 class="h5 fw-bold flex-grow-1">Get a life, get a job, get a dog</h2>
+        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
-      <h2>Get a life, get a job, get a dog</h2>
-      <a href="#" class="read-link">Read</a>
     </div>
   </div>
-  
-  <div class="pagination-bg">
-<nav aria-label="Page navigation">
-  <ul class="pagination">
+
+<nav class="mt-5">
+  <ul class="pagination justify-content-end bg-light rounded p-3">
     <li class="page-item"><a class="page-link" href="#">Previous</a></li>
     <li class="page-item"><a class="page-link" href="#">1</a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
@@ -101,10 +92,7 @@
     <li class="page-item"><a class="page-link" href="#">Next</a></li>
   </ul>
 </nav>
-  </div>
 
-  
-</body>
-</html>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
