--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content-wrapper"> 
       
-      <div class="container py-4 px-3 mx-auto"> 
+      <div class="container py-4 px-3 mx-auto test"> 
         <header>
           <h2 class="brand-color-title">GRANDIOSE</h2>
           <nav >
