--- a/blog.html
+++ b/blog.html
@@ -20,9 +20,9 @@
       <div class="card light-blue h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
           <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="section text-muted">Preamble</span>
+          <span class="text-dark-emphasis">Preamble</span>
         </div>
-        <h2 class="h5 fw-bold flex-grow-1">How to sell drugs online, fast</h2>
+        <h2 class="fs-4 fw-bold flex-grow-1">How to sell drugs online, fast</h2>
         <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
     </div>
@@ -31,9 +31,10 @@
       <div class="card light-purple h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
           <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="section text-muted">Preamble</span>
+          <span class="text-dark-emphasis">Preamble</span>
+
         </div>
-        <h2 class="h5 fw-bold flex-grow-1">Do what I say, not what I do</h2>
+        <h2 class="fs-4 fw-bold flex-grow-1">Do what I say, not what I do</h2>
         <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
     </div>
@@ -42,9 +43,9 @@
       <div class="card light-pink h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
           <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="section text-muted">Preamble</span>
+          <span class="text-dark-emphasis">Preamble</span>
         </div>
-        <h2 class="h5 fw-bold flex-grow-1">Learn by doing, do it now</h2>
+        <h2 class="fs-4 fw-bold flex-grow-1">Learn by doing, do it now</h2>
         <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
     </div>
@@ -53,9 +54,9 @@
       <div class="card light-orange h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
           <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="section text-muted">Preamble</span>
+          <span class="text-dark-emphasis">Preamble</span>
         </div>
-        <h2 class="h5 fw-bold flex-grow-1">Looking for a job ?<br>Let others do this for you</h2>
+        <h2 class="fs-4 fw-bold flex-grow-1">Looking for a job ?<br>Let others do this for you</h2>
         <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
     </div>
@@ -64,9 +65,9 @@
       <div class="card light-blue h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
           <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="section text-muted">Preamble</span>
+          <span class="text-dark-emphasis">Preamble</span>
         </div>
-        <h2 class="h5 fw-bold flex-grow-1">Grandiose, the best thing that happened to me</h2>
+        <h2 class="fs-4 fw-bold flex-grow-1">Grandiose, the best thing that happened to me</h2>
         <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
     </div>
@@ -75,9 +76,9 @@
       <div class="card light-green h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
           <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="section text-muted">Preamble</span>
+          <span class="text-dark-emphasis">Preamble</span>
         </div>
-        <h2 class="h5 fw-bold flex-grow-1">Get a life, get a job, get a dog</h2>
+        <h2 class="fs-4 fw-bold flex-grow-1">Get a life, get a job, get a dog</h2>
         <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
       </div>
     </div>
