--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
-    <div class="main-content-wrapper"> 
-      
-      <div class="container py-4 px-3 mx-auto test"> 
-        <header>
-          <h2 class="brand-color-title">GRANDIOSE</h2>
-          <nav >
-            <a class="brand-color-menu1">Welcome</a>
-            <a class="brand-color-menu2">Hire us !</a>
-            <a class="brand-color-menu2">Work</a>
-            <a class="brand-color-menu2">Blog</a>
-          </nav>
-        </header>
+  <div class="container py-4 px-3 mx-auto">
+    <header class="d-flex align-items-center justify-content-start">
+      <h2 class="brand-color-title mb-0 me-4">GRANDIOSE</h2>
+      <nav class="d-flex gap-4">
+        <a class="brand-color-menu1">Welcome</a>
+        <a class="brand-color-menu2">Hire us !</a>
+        <a class="brand-color-menu2">Work</a>
+        <a class="brand-color-menu2">Blog</a>
+      </nav>
+    </header>
 
         <div class="text-start my-5">
           <img src="images/MAQUETTAGE WEB images/Logo.png" class="img-custom2" alt="logo" ></img>
