Blog boostrap dernière modif

--- a/blog.html
+++ b/blog.html
@@ -19,67 +19,67 @@
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card light-blue h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="text-dark-emphasis">Preamble</span>
+          <span class="badge rounded-pill text-bg-light">Badges</span>
+          <span class="text-dark-emphasis fs-6 text">Preamble</span>
         </div>
         <h2 class="fs-4 fw-bold flex-grow-1">How to sell drugs online, fast</h2>
-        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
+        <a href="#" class="link-underline-primary">Read</a>
       </div>
     </div>
 
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card light-purple h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="text-dark-emphasis">Preamble</span>
+          <span class="badge rounded-pill text-bg-light">Badges</span>
+          <span class="text-dark-emphasis fs-6 text">Preamble</span>
 
         </div>
         <h2 class="fs-4 fw-bold flex-grow-1">Do what I say, not what I do</h2>
-        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
+        <a href="#" class="link-underline-primary">Read</a>
       </div>
     </div>
 
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card light-pink h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="text-dark-emphasis">Preamble</span>
+          <span class="badge rounded-pill text-bg-light">Badges</span>
+          <span class="text-dark-emphasis fs-6 text">Preamble</span>
         </div>
         <h2 class="fs-4 fw-bold flex-grow-1">Learn by doing, do it now</h2>
-        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
+        <a href="#" class="link-underline-primary">Read</a>
       </div>
     </div>
 
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card light-orange h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="text-dark-emphasis">Preamble</span>
+          <span class="badge rounded-pill text-bg-light">Badges</span>
+          <span class="text-dark-emphasis fs-6 text">Preamble</span>
         </div>
         <h2 class="fs-4 fw-bold flex-grow-1">Looking for a job ?<br>Let others do this for you</h2>
-        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
+        <a href="#" class="link-underline-primary">Read</a>
       </div>
     </div>
 
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card light-blue h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-secondary">Badges</span>
+          <span class="badge rounded-pill text-bg-light">Badges</span>
           <span class="text-dark-emphasis">Preamble</span>
         </div>
         <h2 class="fs-4 fw-bold flex-grow-1">Grandiose, the best thing that happened to me</h2>
-        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
+        <a href="#" class="link-underline-primary">Read</a>
       </div>
     </div>
 
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card light-green h-100 p-4 d-flex flex-column">
         <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-secondary">Badges</span>
-          <span class="text-dark-emphasis">Preamble</span>
+          <span class="badge rounded-pill text-bg-light">Badges</span>
+          <span class="text-dark-emphasis fs-6 text">Preamble</span>
         </div>
         <h2 class="fs-4 fw-bold flex-grow-1">Get a life, get a job, get a dog</h2>
-        <a href="#" class="read-link mt-auto text-decoration-underline">Read</a>
+        <a href="#" class="link-underline-primary">Read</a>
       </div>
     </div>
   </div>
