--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,30 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="blog.css" />
 </head>
+
+ <div class="container py-4 px-3 mx-auto">
+    <header class="d-flex align-items-center justify-content-start">
+      <h2 class="brand-color-title mb-0 me-4">GRANDIOSE</h2>
+      <nav class="d-flex gap-4">
+        <a class="brand-color-menu1">Welcome</a>
+        <a class="brand-color-menu2">Hire us !</a>
+        <a class="brand-color-menu2">Work</a>
+        <a class="brand-color-menu2">Blog</a>
+      </nav>
+    </header>
+      
+      <div class="container py-5">
+        <div class="row align-items-center">
+          <div class="col-auto">
+            <img src="images/MAQUETTAGE WEB images/Logo.png" alt="Grandiose Logo" class="img-custom2">
+          </div>
+          <div class="col">
+            <h1 class="fw-bold brand-color mb-2">They are Grandiose</h1>
+            <p class="lead brand-color">Look at these projects ! Our clients portfolio</p>
+          </div>
+        </div>
+      </div>
+
 <body class="bg-white p-4">
 
   <div class="d-flex gap-2 mb-4">
