--- a/index5.html
+++ b/index5.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <div class="container py-4">
+  <div class="container py-4 mb-custom">
     <header class="d-flex align-items-center">
       <h2 class="brand-color-title mb-0 me-4">GRANDIOSE</h2>
       <nav class="d-flex gap-4">
@@ -65,7 +65,7 @@
       <a href="#" class="btn btn-light text-primary fw-bold">Discover how we helped</a>
     </section>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
+    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
         <div class="col">
           <div class="card h-100">
             <img src="images/MAQUETTAGE WEB images/image1tiktok.png" class="card-img-top" alt="...">
@@ -153,5 +153,41 @@
       
     </div>
   </div>
+
+  <div class="container mt-2 mb-0">
+    <nav>
+      <ul class="pagination justify-content-end bg-light rounded p-3">
+        <li class="page-item">
+          <a class="page-link" href="#">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#">Next</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
+  <div style="height: 100px;"></div>
+  <footer class="custom-footer">
+    <div class="footer-content">
+      <div class="mb-4"> 
+          <img src="images/MAQUETTAGE WEB images/Version Logo Default.png" class="img-custom1 footer-logo-img" alt="logo" ></img>
+      </div>
+        <button class="footer-button">Be Grandiose</button>
+        <div class="footer-addresses">
+            <div class="address-block">
+                <h3>New York Office</h3>
+                <p>1065 Avenue of the Americas, New York, NY 10018-1878</p>
+            </div>
+            <div class="address-block">
+                <h3>London Office</h3>
+                <p>Swains Lane Highgate, London N6 6PJ England</p>
+            </div>
+        </div>
+    </div>
+  </footer>
 </body>
 </html>
