--- a/blog.html
+++ b/blog.html
@@ -124,28 +124,29 @@
         <li class="page-item"><a class="page-link" href="#">Next</a></li>
       </ul>
     </nav>
+  </div>
 
-  <footer class="custom-footer">
-        <div class="footer-content">
-          <div class="mb-4"> 
-              <img src="images/MAQUETTAGE WEB images/Version Logo Default.png" class="img-custom1 footer-logo-img" alt="logo" ></img>
-          </div>
-            <button class="footer-button">Be Grandiose</button>
-            <div class="footer-addresses">
-                <div class="address-block">
-                    <h3>New York Office</h3>
-                    <p>1065 Avenue of the Americas, New York, NY 10018-1878</p>
-                </div>
-                <div class="address-block">
-                    <h3>London Office</h3>
-                    <p>Swains Lane Highgate, London N6 6PJ England</p>
-                </div>
-            </div>
+    <div style="height: 100px;"></div>
+    <footer class="custom-footer">
+      <div class="footer-content">
+        <div class="mb-4"> 
+            <img src="images/MAQUETTAGE WEB images/Version Logo Default.png" class="img-custom1 footer-logo-img" alt="logo" ></img>
         </div>
+          <button class="footer-button">Be Grandiose</button>
+          <div class="footer-addresses">
+              <div class="address-block">
+                  <h3>New York Office</h3>
+                  <p>1065 Avenue of the Americas, New York, NY 10018-1878</p>
+              </div>
+              <div class="address-block">
+                  <h3>London Office</h3>
+                  <p>Swains Lane Highgate, London N6 6PJ England</p>
+              </div>
+          </div>
+      </div>
     </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
