--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
+
+  <div class="position-fixed top-0 end-0 p-3" style="z-index: 1080;">
+    <div id="welcomeToast" class="toast align-items-center text-white bg-primary border-0 show" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex">
+        <div class="toast-body">
+          Hey, welcome back to Grandiose !
+        </div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+    </div>
+  </div>
+  
   <div class="container py-4 px-3 mx-auto">
     <header class="d-flex align-items-center justify-content-start">
       <h2 class="brand-color-title mb-0 me-4">GRANDIOSE</h2>
@@ -18,6 +30,7 @@
         <a class="brand-color-menu2">Blog</a>
       </nav>
     </header>
+
 
         <div class="text-start my-5">
           <img src="images/MAQUETTAGE WEB images/Logo.png" class="img-custom2" alt="logo" ></img>
