--- a/blog.html
+++ b/blog.html
@@ -7,20 +7,98 @@
   <title>Card Grid</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="transition.css" />
 </head>
 
-<body class="bg-white p-4">
+
+<body>
+  <div class="page-transition" id="page-transition"></div>
+
+  <div class="modal fade" id="hireModal" tabindex="-1" aria-labelledby="hireModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content rounded-4 shadow">
+        <div class="modal-header border-0">
+          <h5 class="modal-title fw-bold" id="hireModalLabel">Hire us !</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+  
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label class="form-label">Your full name</label>
+              <input type="text" class="form-control" placeholder="Eg. John Grandiose">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Email</label>
+              <input type="email" class="form-control" placeholder="Eg. john@grandiose.com">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Describe your project in a few lines</label>
+              <textarea class="form-control" rows="3" placeholder="Write a message"></textarea>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Your budget</label>
+              <select class="form-select">
+                <option selected>No scale selected</option>
+                <option>Less than 1 000€</option>
+                <option>1 000 – 5 000€</option>
+                <option>More than 5 000€</option>
+              </select>
+            </div>
+  
+            <div class="mb-3">
+              <label class="form-label">What are the profile you’ll need ?</label>
+              <p class="text-muted small">The number in the badge indicates how much people are available to hire</p>
+  
+              <div class="form-check d-flex justify-content-between align-items-center border rounded px-3 py-2 mb-2">
+                <div>
+                  <input class="form-check-input me-2" type="checkbox" id="creativeCheck">
+                  <label class="form-check-label fw-bold" for="creativeCheck">Creatives</label><br />
+                  <small class="text-muted">You want a team of designers</small>
+                </div>
+                <span class="badge bg-light text-dark fw-bold">340</span>
+              </div>
+  
+              <div class="form-check d-flex justify-content-between align-items-center border rounded px-3 py-2 mb-2">
+                <div>
+                  <input class="form-check-input me-2" type="checkbox" id="seoCheck">
+                  <label class="form-check-label fw-bold" for="seoCheck">SEO and search engines geeks</label><br />
+                  <small class="text-muted">You want them to find you</small>
+                </div>
+                <span class="badge bg-light text-dark fw-bold">1 209</span>
+              </div>
+  
+              <div class="form-check d-flex justify-content-between align-items-center border rounded px-3 py-2">
+                <div>
+                  <input class="form-check-input me-2" type="checkbox" id="techCheck">
+                  <label class="form-check-label fw-bold" for="techCheck">Techs, devs, architects</label><br />
+                  <small class="text-muted">Brilliant minds at your service</small>
+                </div>
+                <span class="badge bg-light text-dark fw-bold">290</span>
+              </div>
+            </div>
+          </form>
+        </div>
+  
+        <div class="modal-footer border-0 justify-content-between">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Become Grandiose !</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="container py-4 px-3 mx-auto">
     <header class="d-flex align-items-center justify-content-start">
       <h2 class="brand-color-title mb-0 me-4">GRANDIOSE</h2>
       <nav class="d-flex gap-4">
-        <a class="brand-color-menu1">Welcome</a>
-        <a class="brand-color-menu2">Hire us !</a>
-        <a class="brand-color-menu2">Work</a>
-        <a class="brand-color-menu2">Blog</a>
+        <a class="brand-color-menu2" href="#" onclick="transitionToPage('index.html')">Welcome</a>
+        <a class="brand-color-menu2" data-bs-toggle="modal" data-bs-target="#hireModal">Hire us !</a>
+        <a class="brand-color-menu2" href="#" onclick="transitionToPage('index5.html')">Work</a>
+        <a class="brand-color-menu1" href="#" onclick="transitionToPage('blog.html')">Blog</a>
       </nav>
     </header>
+
 
     <div class="container py-5">
       <div class="row align-items-center">
@@ -145,7 +223,7 @@
           </div>
       </div>
     </footer>
-
+  <script src="transition.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
   </body>
