--- a/index.html
+++ b/index.html
@@ -6,8 +6,84 @@
     <title>Grandiose</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="transition.css" />
 </head>
 <body>
+  <div class="page-transition" id="page-transition"></div>
+
+  <div class="modal fade" id="hireModal" tabindex="-1" aria-labelledby="hireModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content rounded-4 shadow">
+        <div class="modal-header border-0">
+          <h5 class="modal-title fw-bold" id="hireModalLabel">Hire us !</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+  
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label class="form-label">Your full name</label>
+              <input type="text" class="form-control" placeholder="Eg. John Grandiose">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Email</label>
+              <input type="email" class="form-control" placeholder="Eg. john@grandiose.com">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Describe your project in a few lines</label>
+              <textarea class="form-control" rows="3" placeholder="Write a message"></textarea>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Your budget</label>
+              <select class="form-select">
+                <option selected>No scale selected</option>
+                <option>Less than 1 000€</option>
+                <option>1 000 – 5 000€</option>
+                <option>More than 5 000€</option>
+              </select>
+            </div>
+  
+            <div class="mb-3">
+              <label class="form-label">What are the profile you’ll need ?</label>
+              <p class="text-muted small">The number in the badge indicates how much people are available to hire</p>
+  
+              <div class="form-check d-flex justify-content-between align-items-center border rounded px-3 py-2 mb-2">
+                <div>
+                  <input class="form-check-input me-2" type="checkbox" id="creativeCheck">
+                  <label class="form-check-label fw-bold" for="creativeCheck">Creatives</label><br />
+                  <small class="text-muted">You want a team of designers</small>
+                </div>
+                <span class="badge bg-light text-dark fw-bold">340</span>
+              </div>
+  
+              <div class="form-check d-flex justify-content-between align-items-center border rounded px-3 py-2 mb-2">
+                <div>
+                  <input class="form-check-input me-2" type="checkbox" id="seoCheck">
+                  <label class="form-check-label fw-bold" for="seoCheck">SEO and search engines geeks</label><br />
+                  <small class="text-muted">You want them to find you</small>
+                </div>
+                <span class="badge bg-light text-dark fw-bold">1 209</span>
+              </div>
+  
+              <div class="form-check d-flex justify-content-between align-items-center border rounded px-3 py-2">
+                <div>
+                  <input class="form-check-input me-2" type="checkbox" id="techCheck">
+                  <label class="form-check-label fw-bold" for="techCheck">Techs, devs, architects</label><br />
+                  <small class="text-muted">Brilliant minds at your service</small>
+                </div>
+                <span class="badge bg-light text-dark fw-bold">290</span>
+              </div>
+            </div>
+          </form>
+        </div>
+  
+        <div class="modal-footer border-0 justify-content-between">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Become Grandiose !</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="position-fixed top-0 end-0 p-3" style="z-index: 1080;">
     <div id="welcomeToast" class="toast align-items-center text-white bg-primary border-0 show" role="alert" aria-live="assertive" aria-atomic="true">
@@ -19,15 +95,15 @@
       </div>
     </div>
   </div>
-  
+
   <div class="container py-4 px-3 mx-auto">
     <header class="d-flex align-items-center justify-content-start">
       <h2 class="brand-color-title mb-0 me-4">GRANDIOSE</h2>
       <nav class="d-flex gap-4">
-        <a class="brand-color-menu1">Welcome</a>
-        <a class="brand-color-menu2">Hire us !</a>
-        <a class="brand-color-menu2">Work</a>
-        <a class="brand-color-menu2">Blog</a>
+        <a class="brand-color-menu1" href="#" onclick="transitionToPage('index.html')">Welcome</a>
+        <a class="brand-color-menu2" data-bs-toggle="modal" data-bs-target="#hireModal">Hire us !</a>
+        <a class="brand-color-menu2" href="#" onclick="transitionToPage('index5.html')">Work</a>
+        <a class="brand-color-menu2" href="#" onclick="transitionToPage('blog.html')">Blog</a>
       </nav>
     </header>
 
@@ -299,6 +375,21 @@
             </div>
         </div>
     </footer>
+    <div id="page-transition" class="page-transition"></div>
+    <script>
+      document.querySelectorAll('a[href$=".html"]').forEach(link => {
+        link.addEventListener('click', function (e) {
+          e.preventDefault();
+          const url = this.href;
+          document.getElementById('page-transition').classList.add('active');
+          setTimeout(() => {
+            window.location.href = url;
+          }, 700); // doit correspondre à la durée du CSS
+        });
+      });
+    </script>
+
+    <script src="transition.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
